# picalc

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  sysroot-symlinks.sh  toolchain.cmake
bak/: Makefile
src/: eval.c  eval.h  gpio.c  gpio.h  history.c  history.h  keypad.c  keypad.h  lcd.c  lcd.h  main.c  srledit.c  srledit.h  state.c  state.h  ui.c  ui.h
